logic/review-service/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
