logic/review-service/kube/destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: review-service
spec:
  host: review-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
    outlierDetection:
      consecutiveErrors: 5
      interval: 10s
      baseEjectionTime: 30s
