logic/review-service/kube/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: review-service
spec:
  hosts:
    - review-service
  gateways:
    - kong-gateway
  http:
    - route:
        - destination:
            host: review-service
            port:
              number: 80
